--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1F7EBF" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Crush debt faster with Skyrafi. AI-powered payoff plans, real-time spending insights, and a clear wealth bridge from debt to savings."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +30,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Skyrafi — AI-Powered Debt Freedom Platform</title>
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Skyrafi — AI-Powered Debt Freedom Platform" />
+    <meta property="og:description" content="Crush debt faster with AI-driven payoff plans, spending insights, and a wealth bridge from debt to savings." />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta property="og:site_name" content="Skyrafi" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Skyrafi — AI-Powered Debt Freedom Platform" />
+    <meta name="twitter:description" content="Crush debt faster with AI-driven payoff plans, spending insights, and a wealth bridge from debt to savings." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
+
+    <!-- Additional SEO -->
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="Skyrafi" />
+    <meta name="keywords" content="debt freedom, AI finance, debt payoff, financial planning, wealth building, debt management" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
